Stop blurring things

--- a/app/assets/sass/modules/_gal.scss
+++ b/app/assets/sass/modules/_gal.scss
@@ -52,8 +52,12 @@
 	@include border-radius;
 	overflow: hidden;
 
+
 	.gal-text {
-		visibility: hidden;
+		//@include transition-property( opacity );
+		//@include transition-duration( 0.25s );
+		//@include transition-timing-function( ease-in-out );
+		@include opacity( 0 );
 	}
 
 	img {
@@ -65,7 +69,7 @@
 
 	&:hover {
 		.gal-text {
-			visibility: visible;
+			@include opacity( 1 );
 		}
 	}
 }
@@ -77,7 +81,7 @@
 	bottom: 0;
 	right: 0;
 	z-index: 10;
-	@include rgba-background( rgba( black, 0.6 ) );
+	@include rgba-background( rgba( black, 0.8 ) );
 }
 
 .gal-text-content-wrap {
@@ -92,6 +96,7 @@
 	text-align: center;
 	line-height: 1.1;
 	padding: 0 1rem;
+	@include text-shadow( 0 1px 10px black );
 
 	h2 {
 		margin-top: 0;
